# mindflow

./: CMakeLists.txt  LICENSE  README.md
source/: dumpmem.c  main.c  matrix.c  matrix.h  msg.h  optab.c  vm.c  vm.h
source/op/: add.c  and.c  cjmp.c  dec.c  disp.c  eq.c  great.c  inc.c  jmp.c  less.c  loada.c  loadb.c  loadc.c  loadd.c  lshift.c  neq.c  nop.c  not.c  or.c  popa.c  popb.c  popc.c  popd.c  push.c  pusha.c  pushb.c  pushc.c  pushd.c  rshift.c  stop.c  sub.c  xor.c
